--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,39 +1,30 @@
 ########################
 # OptaPlanner properties
-########################
-
+#########################
 # The solver runs for 30 seconds. To run for 5 minutes use "5m" and for 2 hours use "2h".
-optaplanner.solver.termination.spent-limit=5s
-
+optaplanner.solver.termination.spent-limit=30s
 # To change how many solvers to run in parallel
 # optaplanner.solver-manager.parallel-solver-count=4
 # To run increase CPU cores usage per solver
-# optaplanner.solver.move-thread-count=2
-
+optaplanner.solver.move-thread-count=2
 # To detect common bugs in your code
 # optaplanner.solver.environment-mode=FULL_ASSERT
-
 # XML file for power tweaking, defaults to solverConfig.xml (directly under src/main/resources)
 # optaplanner.solver-config-xml=org/.../timeTableSolverConfig.xml
-
 ########################
 # Spring Boot properties
-########################
-
+#########################
 # Make it easier to read OptaPlanner logging
 logging.pattern.console=%d{HH:mm:ss.SSS} %clr(${LOG_LEVEL_PATTERN:%5p}) %blue([%-15.15t]) %m%n
 # logging.level.org.optaplanner=DEBUG
-
 ########################
 # DB2 properties
 ########################
-
 spring.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
 spring.datasource.url=jdbc:db2://localhost:50000/DBDSNT
-spring.datasource.username=apsg01	
+spring.datasource.username=apsg01
 spring.datasource.password=@Imedta1
 spring.datasource.jndiName=jdbc/NSS
-
 spring.datasource.tomcat.max-active=2000
 spring.datasource.tomcat.max-idle=50
 spring.datasource.tomcat.min-idle=10
@@ -45,10 +36,9 @@ spring.datasource.tomcat.validation-query=SELECT 1
 spring.datasource.tomcat.remove-abandoned=true
 spring.datasource.tomcat.remove-abandoned-timeout=1800
 spring.datasource.tomcat.max-wait=20000
-spring.datasource.tomcat.default-auto-commit=true   
-
+spring.datasource.tomcat.default-auto-commit=true
 # ===============================
-# = JPA / HIBERNATE
+# JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
 spring.jpa.show-sql=true
