--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -44,13 +44,18 @@ spring.datasource.tomcat.default-auto-commit=true
 spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
-
+# ===============================
+# ELSE
+# ===============================
+# Date format
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=iso
 spring.mvc.format.time=HH:mm:ss
+# Jackson properties
+spring.jackson.default-property-inclusion=NON_NULL
