【Feat】Adjusted RESTful API functions which enable the scheduling environment to initialize.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -59,3 +59,5 @@ spring.mvc.format.date-time=iso
 spring.mvc.format.time=HH:mm:ss
 # Jackson properties
 spring.jackson.default-property-inclusion=NON_NULL
+# Prefix to All Spring Boot Controllers
+server.servlet.context-path=/sgs/api
