--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -50,6 +50,7 @@ spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.Im
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
+spring.jpa.properties.hibernate.default_schema=APSG01
 # ===============================
 # ELSE
 # ===============================
@@ -60,4 +61,4 @@ spring.mvc.format.time=HH:mm:ss
 # Jackson properties
 spring.jackson.default-property-inclusion=NON_NULL
 # Prefix to All Spring Boot Controllers
-server.servlet.context-path=/sgs/api
+server.servlet.context-path=/sgs/api/engine
