【Feat】set constraints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,7 @@ spring.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
 spring.datasource.url=jdbc:db2://localhost:50000/DBDSNT
 spring.datasource.username=apsg01
 spring.datasource.password=@Imedta1
-spring.datasource.jndiName=jdbc/NSS
+spring.datasource.jndiName=jdbc/sgsDSNds
 spring.datasource.tomcat.max-active=2000
 spring.datasource.tomcat.max-idle=50
 spring.datasource.tomcat.min-idle=10
@@ -41,14 +41,15 @@ spring.datasource.tomcat.default-auto-commit=true
 # JPA / HIBERNATE
 # ===============================
 # Show or not log for each sql query
-spring.jpa.show-sql=true
+#spring.jpa.show-sql=true
 # Hibernate ddl auto (create, create-drop, update): with "create-drop" the database
 # schema will be automatically created afresh for every start of application
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 # Naming strategy
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyLegacyHbmImpl
 spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.hibernate.SpringPhysicalNamingStrategy
 # Allows Hibernate to generate SQL optimized for a particular DBMS
+#spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
 spring.jpa.properties.hibernate.default_schema=APSG01
 # ===============================
