--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,7 @@
         <dependency>
             <groupId>org.apache.tomcat</groupId>
             <artifactId>tomcat-dbcp</artifactId>
-            <version>10.1.0-M17</version>
+            <version>9.0.65</version>
         </dependency>
         <!-- Spring -->
         <dependency>
