--- a/pom.xml
+++ b/pom.xml
@@ -155,7 +155,7 @@
         </dependency>
     </dependencies>
     <build>
-        <finalName>NNS</finalName>
+        <finalName>NSS</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
