--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -51,7 +51,7 @@ spring.jpa.hibernate.naming.physical-strategy=org.springframework.boot.orm.jpa.h
 # Allows Hibernate to generate SQL optimized for a particular DBMS
 #spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.DB2Dialect
-spring.jpa.properties.hibernate.default_schema=APSG01
+spring.jpa.properties.hibernate.default_schema=SG
 # ===============================
 # ELSE
 # ===============================
