【Feat】Added multiple constraints.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,13 +2,14 @@
 # OptaPlanner properties
 #########################
 # The solver runs for 30 seconds. To run for 5 minutes use "5m" and for 2 hours use "2h".
-optaplanner.solver.termination.spent-limit=30s
+optaplanner.solver.termination.spent-limit=60s
 # To change how many solvers to run in parallel
-# optaplanner.solver-manager.parallel-solver-count=4
+optaplanner.solver-manager.parallel-solver-count=1
 # To run increase CPU cores usage per solver
-optaplanner.solver.move-thread-count=2
+#optaplanner.solver.move-thread-count=AUTO
 # To detect common bugs in your code
-# optaplanner.solver.environment-mode=FULL_ASSERT
+#optaplanner.solver.environment-mode=FULL_ASSERT
+optaplanner.solver.environment-mode=NON_REPRODUCIBLE
 # XML file for power tweaking, defaults to solverConfig.xml (directly under src/main/resources)
 # optaplanner.solver-config-xml=org/.../timeTableSolverConfig.xml
 ########################
@@ -16,12 +17,15 @@ optaplanner.solver.move-thread-count=2
 #########################
 # Make it easier to read OptaPlanner logging
 logging.pattern.console=%d{HH:mm:ss.SSS} %clr(${LOG_LEVEL_PATTERN:%5p}) %blue([%-15.15t]) %m%n
-# logging.level.org.optaplanner=DEBUG
+#logging.level.org.optaplanner=DEBUG
 ########################
 # DB2 properties
 ########################
 spring.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
+# TEST
 spring.datasource.url=jdbc:db2://localhost:50000/DBDSNT
+# OFFICIAL
+#spring.datasource.url=jdbc:db2://localhost:50000/DBDSNP
 spring.datasource.username=apsg01
 spring.datasource.password=@Imedta1
 spring.datasource.jndiName=jdbc/sgsDSNds
@@ -59,7 +63,5 @@ spring.jpa.properties.hibernate.default_schema=SG
 spring.mvc.format.date=yyyy-MM-dd
 spring.mvc.format.date-time=iso
 spring.mvc.format.time=HH:mm:ss
-# Jackson properties
-spring.jackson.default-property-inclusion=NON_NULL
 # Prefix to All Spring Boot Controllers
-server.servlet.context-path=/sgs/api/engine
+server.servlet.context-path=/sgs/engine
