--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -7,8 +7,7 @@ log4j.appender.ReportingStdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.ReportingStdout.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
 
 log4j.appender.ReportingDaily=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.ReportingDaily.File=D:\\MedServerAPLog\\Reporting\\HISRep.log
-log4j.appender.ReportingDaily.DatePattern='.'yyyy-MM-dd
+log4j.appender.ReportingDaily.File=/MedServerAPLog/SGS/SGS.log
 log4j.appender.ReportingDaily.layout=org.apache.log4j.PatternLayout
 log4j.appender.ReportingDaily.layout.ConversionPattern=%-d{yyyy-MM-dd HH:mm:ss} [%c]-[%p] %m%n
 
