--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,18 +28,18 @@ spring.datasource.url=jdbc:db2://localhost:50000/DBDSNT
 #spring.datasource.url=jdbc:db2://localhost:50000/DBDSNP
 spring.datasource.username=apsg01
 spring.datasource.password=@Imedta1
-spring.datasource.jndiName=jdbc/sgsDSNds
-spring.datasource.tomcat.max-active=2000
-spring.datasource.tomcat.max-idle=50
+spring.datasource.jndiName=jdbc/sgsDBSds
+spring.datasource.tomcat.max-active=100
+spring.datasource.tomcat.max-idle=100
 spring.datasource.tomcat.min-idle=10
 spring.datasource.tomcat.initial-size=10
 spring.datasource.tomcat.min-evictable-idle-time-millis=60000
-spring.datasource.tomcat.time-between-eviction-runs-millis=30000
+spring.datasource.tomcat.time-between-eviction-runs-millis=5000
 spring.datasource.tomcat.test-on-borrow=true
-spring.datasource.tomcat.validation-query=SELECT 1
+spring.datasource.tomcat.validation-query=SELECT 1 FROM SYSIBM.SYSDUMMY1
 spring.datasource.tomcat.remove-abandoned=true
-spring.datasource.tomcat.remove-abandoned-timeout=1800
-spring.datasource.tomcat.max-wait=20000
+spring.datasource.tomcat.remove-abandoned-timeout=60
+spring.datasource.tomcat.max-wait=30000
 spring.datasource.tomcat.default-auto-commit=true
 # ===============================
 # JPA / HIBERNATE
