--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,9 +5,9 @@
                       http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0"
          metadata-complete="true">
-    <display-name>sgsDSNds</display-name>
+    <display-name>sgsDBSds</display-name>
     <resource-ref>
-        <res-ref-name>jdbc/sgsDSNds</res-ref-name>
+        <res-ref-name>jdbc/sgsDBSds</res-ref-name>
         <res-type>javax.sql.DataSource</res-type>
         <res-auth>Container</res-auth>
         <res-sharing-scope>Shareable</res-sharing-scope>
