--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,10 +22,16 @@ logging.pattern.console=%d{HH:mm:ss.SSS} %clr(${LOG_LEVEL_PATTERN:%5p}) %blue([%
 # DB2 properties
 ########################
 spring.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
-# TEST
+# ?????
 spring.datasource.url=jdbc:db2://localhost:50000/DBDSNT
-# OFFICIAL
+spring.getoffinfo.url=https://oapimt.vghks.gov.tw:8065/PSPDService/ps/pspd/getOffInfo
+spring.apikey=56035a65-2a83-4ad0-a52e-16824c7334e3
+# ?????
 #spring.datasource.url=jdbc:db2://localhost:50000/DBDSNP
+#spring.getOffInfo.url=https://oapim.vghks.gov.tw:8065/PSPDService/ps/pspd/getOffInfo
+#spring.apikey=7d08ee30-acf1-4a6b-99d6-7596c7a45fb6
+spring.hid=2A0
+spring.apid=APSG01
 spring.datasource.username=apsg01
 spring.datasource.password=@Imedta1
 spring.datasource.jndiName=jdbc/sgsDBSds
