--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
     <packaging>war</packaging>
     
     <properties>
-        <version.org.optaplanner>7.73.0.Final</version.org.optaplanner>
         <version.org.springframework.boot>2.7.3</version.org.springframework.boot>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
@@ -27,19 +26,7 @@
         <surefire-plugin.version>2.22.2</surefire-plugin.version>
     </properties>
     
-    <dependencyManagement>
-        <dependencies>
-            <!-- Optaplanner -->
-            <dependency>
-                <groupId>org.optaplanner</groupId>
-                <artifactId>optaplanner-bom</artifactId>
-                <version>${version.org.optaplanner}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
-    </dependencyManagement>
-    
+
     <dependencies>
         <!-- Spring -->
         <dependency>
@@ -112,16 +99,6 @@
                  </exclusion>
             </exclusions>
         </dependency>
-        <!-- Optaplanner -->
-        <dependency>
-            <groupId>org.optaplanner</groupId>
-            <artifactId>optaplanner-spring-boot-starter</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.optaplanner</groupId>
-            <artifactId>optaplanner-test</artifactId>
-            <scope>test</scope>
-        </dependency>
         <!-- Tomcat -->
         <dependency>
             <groupId>org.apache.tomcat</groupId>
@@ -174,6 +151,12 @@
             <groupId>com.mashape.unirest</groupId>
             <artifactId>unirest-java</artifactId>
             <version>1.4.9</version>
+        </dependency>
+        <!--JASYPT-->
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>3.0.5</version>
         </dependency>
     </dependencies>
     
