【Fix】Fixed shift replacement logic.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,6 @@
 ########################
 # DB2 properties
 ########################
-spring.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
-# TEST
-spring.datasource.url=jdbc:db2://localhost:50000/DBDSNT
-spring.getoffinfo.url=https://oapimt.vghks.gov.tw:8065/PSPDService/ps/pspd/getOffInfo
-spring.apikey=56035a65-2a83-4ad0-a52e-16824c7334e3
-# OFFICIAL
-#spring.datasource.url=jdbc:db2://localhost:50000/DBDSNP
-#spring.getOffInfo.url=https://oapim.vghks.gov.tw:8065/PSPDService/ps/pspd/getOffInfo
-#spring.apikey=7d08ee30-acf1-4a6b-99d6-7596c7a45fb6
 spring.hid=2A0
 spring.apid=APSG01
 spring.datasource.username=apsg01
@@ -26,6 +17,15 @@ spring.datasource.tomcat.remove-abandoned=true
 spring.datasource.tomcat.remove-abandoned-timeout=60
 spring.datasource.tomcat.max-wait=30000
 spring.datasource.tomcat.default-auto-commit=true
+spring.datasource.driverClassName=com.ibm.db2.jcc.DB2Driver
+# TEST
+#spring.datasource.url=jdbc:db2://localhost:50000/DBDSNT
+#spring.getoffinfo.url=https://oapimt.vghks.gov.tw:8065/PSPDService/ps/pspd/getOffInfo
+#spring.apikey=56035a65-2a83-4ad0-a52e-16824c7334e3
+# PRODUCTION
+spring.datasource.url=jdbc:db2://localhost:50000/DBDSNP
+spring.getOffInfo.url=https://oapim.vghks.gov.tw:8065/PSPDService/ps/pspd/getOffInfo
+spring.apikey=7d08ee30-acf1-4a6b-99d6-7596c7a45fb6
 # ===============================
 # JPA / HIBERNATE
 # ===============================
